# SemantiCLI

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml  requirements-dev.txt
.github/workflows/: publish.yml  test.yml
src/semanticli/: __init__.py  __main__.py  cli.py
src/semanticli/cli/: cli.py  parser_setup.py
src/semanticli/commands/: greet.py  version.py
src/semanticli/model/: inference.py  install.py
src/semanticli/utils/: logger.py
tests/: conftest.py  test_greet.py
