[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semanticli"
dynamic = ["version"]
description = "Command line tool using argparse"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.8"
dependencies = []  # No external dependencies needed for argparse!

[project.scripts]
semanticli = "semanticli.cli:main"

[tool.setuptools.dynamic]
version = {attr = "semanticli.__version__"}
